improve registration_service