@@ -10,6 +10,7 @@ import com.engsoft2.registration_service.repositories.ClientRepository;
 import com.engsoft2.registration_service.repositories.ApplicationRepository;
 import com.engsoft2.registration_service.services.dto.SubscriptionDTO;
 
+import java.util.Calendar;
 import java.util.Date;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -18,42 +19,40 @@ import java.util.stream.Collectors;
 @Service
 public class SubscriptionService {
 
-    @Autowired
-    private SubscriptionRepository subscriptionRepository;
+    private final SubscriptionRepository subscriptionRepository;
+    private final ClientRepository clientRepository;
+    private final ApplicationRepository applicationRepository;
 
     @Autowired
-    private ClientRepository clientRepository;
-
-    @Autowired
-    private ApplicationRepository applicationRepository;
-
     public SubscriptionService(SubscriptionRepository subscriptionRepository, ClientRepository clientRepository, ApplicationRepository applicationRepository) {
         this.subscriptionRepository = subscriptionRepository;
         this.clientRepository = clientRepository;
         this.applicationRepository = applicationRepository;
     }
 
+    /**
+     * Get Subscriptions in database by Status
+     * @param type Status type {"TODAS, "ATIVOS", "CANCELADAS"}
+     * @return Return a list of subscriptions filtered by type
+     */
     public List<SubscriptionDTO> getSubscriptionsByType(String type) {
-        List<Subscription> subscriptions;
-        switch (type) {
-            case "ATIVAS":
-                subscriptions = subscriptionRepository.findByEndSubscriptionAfter(new Date());
-                break;
-            case "CANCELADAS":
-                subscriptions = subscriptionRepository.findByEndSubscriptionBefore(new Date());
-                break;
-            case "TODAS":
-                subscriptions = subscriptionRepository.findAll();
-                break;
-            default:
-                throw new IllegalArgumentException("Tipo de assinatura inválido");
-        }
+        List<Subscription> subscriptions = switch (type) {
+			case "ATIVAS" -> subscriptionRepository.findByEndSubscriptionAfter(new Date());
+			case "CANCELADAS" -> subscriptionRepository.findByEndSubscriptionBefore(new Date());
+			case "TODAS" -> subscriptionRepository.findAll();
+			default -> throw new IllegalArgumentException("Invalid Status Type");
+		};
 
-        return subscriptions.stream()
+		return subscriptions.stream()
                 .map(sub -> new SubscriptionDTO(sub.getSubscriptionId(), sub.getClient().getClientId(), sub.getApplication().getAppId(), sub.getBeginSubscription(), sub.getEndSubscription(), sub.getStatus()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    /**
+     * Get Subscriptions in database by Client Id
+     * @param clientId Client ID in DB
+     * @return Return a list of subscriptions filtered by the client
+     */
     public List<SubscriptionDTO> getSubscriptionsByClientId(Long clientId) {
         Client client = clientRepository.findById(clientId).orElseThrow(() -> new IllegalArgumentException("Cliente não encontrado"));
         return subscriptionRepository.findByClient(client).stream()
@@ -61,6 +60,11 @@ public class SubscriptionService {
                 .collect(Collectors.toList());
     }
 
+    /**
+     * Get Subscriptions in database by Application Id
+     * @param appId Application ID in DB
+     * @return Return a list of subscriptions filtered by the application
+     */
     public List<SubscriptionDTO> getSubscriptionsByAppId(Long appId) {
         Application application = applicationRepository.findById(appId).orElseThrow(() -> new IllegalArgumentException("Aplicativo não encontrado"));
         return subscriptionRepository.findByApplication(application).stream()
@@ -68,14 +72,28 @@ public class SubscriptionService {
                 .collect(Collectors.toList());
     }
 
+    /**
+     * Create a subscription of the app to the client for 7 days
+     * @param clientId Client Id
+     * @param appId Application Id
+     * @return Returns the subscription
+     */
     public SubscriptionDTO createSubscription(Long clientId, Long appId) {
-        Subscription subscription = new Subscription();
-        subscription.setClient(clientRepository.findById(clientId).orElseThrow(() -> new IllegalArgumentException("Cliente não encontrado")));
-        subscription.setApplication(applicationRepository.findById(appId).orElseThrow(() -> new IllegalArgumentException("Aplicativo não encontrado")));
-        subscription.setBeginSubscription(new Date());
-        subscription.setEndSubscription(null); // Assinatura ativa inicialmente
+        Calendar beginSubscription = Calendar.getInstance();
+        Calendar endSubscription = Calendar.getInstance();
+
+        endSubscription.add(Calendar.DAY_OF_MONTH, 7);
+
+        Subscription subscription = new Subscription(
+                applicationRepository.findById(appId).orElseThrow(() -> new IllegalArgumentException("Aplicativo não encontrado")),
+                clientRepository.findById(clientId).orElseThrow(() -> new IllegalArgumentException("Cliente não encontrado")),
+                beginSubscription.getTime(),
+                endSubscription.getTime()
+        );
+
         subscription = subscriptionRepository.save(subscription);
-        return new SubscriptionDTO(subscription.getSubscriptionId(), subscription.getClient().getClientId(), subscription.getApplication().getAppId(), subscription.getBeginSubscription(), subscription.getEndSubscription(), subscription.getStatus());
+
+        return new SubscriptionDTO(subscription.getSubscriptionId(), subscription.getClient().getClientId(), subscription.getApplication().getAppId(), beginSubscription.getTime(), subscription.getEndSubscription(), subscription.getStatus());
     }
 }
 
